--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <div>lorem5</div>
     <div>lorem5</div>
     <p>added a new para as feature1</p>
+    <p>Lorem ipsum dolor sit.</p>
+    <p>Lorem ipsum dolor sit.</p>
   </body>
 </html>
